<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
        >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/howtoheading"
        android:id="@+id/textView"
        android:layout_marginLeft="20dp"
        android:textSize="15sp"

        android:layout_marginTop="20dp"/>

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="180dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="10dp">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentTop="false"
        android:layout_alignParentBottom="false"
        >

        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:text="@string/step1"
            android:id="@+id/textView1"
            android:layout_gravity="left"
            android:textSize="40sp"
            android:typeface="sans"

            android:gravity="center_vertical"
            android:layout_centerVertical="true"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/step1content"
            android:id="@+id/textView1content"
            android:layout_gravity="right|center_vertical"
            android:textSize="12sp"
            android:typeface="sans"
            android:layout_toRightOf="@+id/textView1"
            android:layout_marginLeft="10dp"
                        android:gravity="center_vertical"
            />
    </RelativeLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="60dp">

        <TextView
            android:layout_width="20dp"
            android:layout_height="fill_parent"
            android:text="@string/step2"
            android:id="@+id/textView2"
            android:layout_gravity="left"
            android:textSize="40sp"
            android:typeface="sans"
            android:layout_alignParentLeft="true"
            android:gravity="center_vertical"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/step2content"
            android:id="@+id/textView2content"
            android:layout_gravity="right|center_vertical"
            android:textSize="12sp"
            android:typeface="sans"
            android:layout_toRightOf="@+id/textView2"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"/>
    </RelativeLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="120dp">

        <TextView
            android:layout_width="20dp"
            android:layout_height="fill_parent"
            android:text="@string/step3"
            android:id="@+id/textView3"
            android:layout_gravity="left"
            android:textSize="40sp"
            android:typeface="sans"
            android:lineSpacingMultiplier="1"
            android:lines="1"
            android:gravity="center"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/step3content"
            android:id="@+id/textView3content"
            android:layout_gravity="right|center_vertical"
            android:textSize="12sp"
            android:typeface="sans"
            android:layout_toRightOf="@+id/textView3"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"/>
    </RelativeLayout>
        </RelativeLayout>


</LinearLayout>

